Improved UI and responsiveness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Revolt Voice Assistant</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Revolt Motors Voice Assistant</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Revolt Motors Voice Assistant</h1>
-  <button id="startBtn">Start Talking</button>
-  <p id="response"></p>
+  <div class="container">
+    <h1>Revolt Motors Voice Assistant</h1>
+    <div class="card">
+      <p class="instructions">Click the button and start speaking.</p>
+      <button id="startBtn">🎤 Start Talking</button>
+      <p id="response" class="response"></p>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
