Updated frontend UI with mic indicator

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Revolt Motors Voice Assistant</h1>
+    <h1>Revolt Motors Voice Assistant by Ayush Sharma</h1>
     <div class="card">
       <p class="instructions">Click the button and start speaking.</p>
-      <button id="startBtn">🎤 Start Talking</button>
+      <button id="startBtn" class="mic-off">🎤 Start Talking</button>
+      <div id="micIndicator" class="mic-indicator"></div>
       <p id="response" class="response"></p>
     </div>
   </div>
